k8s/dev/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ai-tutor-dev
spec:
  selector:
    app: ai-tutor-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
